changing home button

--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
     <title>About</title>
   </head>
   <body>
-    <button class="homeGear" onclick="window.open('index.html','_self')">
-      <img class="gear" src="orangeGear2.png" />Home
+    <button class="home_icon" onclick="window.open('index.html','_self')">
+      <img class="home" src="HomeIcon.png" />
     </button>
     <div class="general-text">
       <div class="intro_text">General:</div>
