--- a/projects.html
+++ b/projects.html
@@ -18,8 +18,8 @@
     <title>Projects</title>
   </head>
   <body>
-    <button class="homeGear" onclick="window.open('index.html','_self')">
-      <img class="gear" src="orangeGear2.png" />Home
+    <button class="home_icon" onclick="window.open('index.html','_self')">
+      <img class="home" src="HomeIcon.png" />
     </button>
     <div class="home-intro">
       <div class="intro_text">Projects</div>
