home icon, shorties

--- a/projects.html
+++ b/projects.html
@@ -38,10 +38,16 @@
         </p>
       </article>
       <footer class="footer">
-        <a
+        <!-- <a
           href="https://github.com/merry-mouse/python_web_scraping_checking_tickets"
           >python_web_scraping_checking_tickets</a
+        > -->
+        <a
+          class="footer"
+          href="https://github.com/merry-mouse/python_web_scraping_checking_tickets"
         >
+          <img class="repo" src="repoGit.png"
+        /></a>
       </footer>
     </div>
     <div class="wrapper">
@@ -59,8 +65,8 @@
       <footer class="footer">
         <a
           href="https://github.com/merry-mouse/deleting_expired_items_from_zalando_liked_list"
-          >deleting_expired_items_from_zalando_liked_list</a
-        >
+          ><img class="repo" src="repoGit.png"
+        /></a>
       </footer>
     </div>
     <div class="wrapper">
@@ -78,7 +84,7 @@
       </article>
       <footer class="footer">
         <a href="https://github.com/merry-mouse/apartments_price_prediction"
-          >apartments_price_prediction
+          ><img class="repo" src="repoGit.png" />
         </a>
       </footer>
     </div>
@@ -98,7 +104,9 @@
         </p>
       </article>
       <footer class="footer">
-        <a href="#">private repository</a>
+        <a href="https://github.com/merry-mouse/DNA"
+          ><img class="repo" src="repoGit.png" />
+        </a>
       </footer>
     </div>
     <div class="wrapper">
@@ -116,8 +124,8 @@
       </article>
       <footer class="footer">
         <a href="https://github.com/merry-mouse/What_tree_areU"
-          >What_tree_areU</a
-        >
+          ><img class="repo" src="repoGit.png"
+        /></a>
       </footer>
     </div>
   </body>
