--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
   <head>
-    <!-- <meta name="viewport" content="initial-scale=1, width=device-width"> -->
+    <!-- <meta name="viewport" content="initial-scale=1, width=device-width" /> -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -41,6 +41,11 @@
         Hi there! I'm <span class="names">Anastasia</span><br />
         But you can call me <span class="names">Stash</span>
       </div>
+    </div>
+    <div class="general-text">
+      <p>I'm a Python developer</p>
+      <p>Living in Stockholm</p>
+      <p>Actively searching for a job</p>
     </div>
     <p class="homepageEnd">© 2022 Anastasiia Potekhina</p>
   </body>
