--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
       </div>
     </div>
     <div class="general-text">
-      <p>I'm a Python developer</p>
-      <p>Living in Stockholm</p>
+      <p>Junior Python developer</p>
+      <p>Passionate female coder</p>
+      <p>Based in Stockholm</p>
       <p>Actively searching for a job</p>
     </div>
     <p class="homepageEnd">© 2022 Anastasiia Potekhina</p>
