put pictures into a separate folder

--- a/about.html
+++ b/about.html
@@ -48,20 +48,20 @@
       </p>
       <div class="intro_text">Programming courses and certificates:</div>
       <p>"Introduction to HTML, CSS and JavaScript" by SheCodes</p>
-      <img class="certificate" src="SheCodesCertificate.png" />
+      <img class="certificate" src="pictures/SheCodesCertificate.png" />
       <p>"Python Crash Course" by Coursera and Google</p>
-      <img class="certificate" src="pythonCrashCourse.png" />
+      <img class="certificate" src="pictures/pythonCrashCourse.png" />
       <p>
         "Using Python to Interact with the Operating System" by Coursera and
         Google
       </p>
-      <img class="certificate" src="usingPythonToInteractWithOS.png" />
+      <img class="certificate" src="pictures/usingPythonToInteractWithOS.png" />
       <p>"Troubleshooting and Debugging Techniques" by Coursera and Google</p>
-      <img class="certificate" src="troubleshooting.png" />
+      <img class="certificate" src="pictures/troubleshooting.png" />
       <p>"Introduction to Git" by Coursera and Google</p>
-      <img class="certificate" src="introToGit.png" />
+      <img class="certificate" src="pictures/introToGit.png" />
       <p>"Advanced Python programming" by ProgrammingHub</p>
-      <img class="certificate" src="pythonAdvanced.jpg" />
+      <img class="certificate" src="pictures/pythonAdvanced.jpg" />
       <p>
         CS50 Introduction to Computer Science by Harvard University and
         OpenCourseWare (ongoing)
