--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <button class="home_icon" onclick="window.open('index.html','_self')">
-      <img class="home" src="HomeIcon.png" />
+      <img class="home" src="pictures/HomeIcon.png" />
     </button>
     <div class="home-intro">
       <div class="intro_text">Contact me via mail or LinkedIn:</div>
@@ -32,7 +32,8 @@
             aria-current="page"
             href="mailto:potekh.anastasia@gmail.com"
           >
-            <img class="logo" src="email.png" /> potekh.anastasia@gmail.com</a
+            <img class="logo" src="pictures/email.png" />
+            potekh.anastasia@gmail.com</a
           >
         </li>
         <li class="nav-item">
@@ -40,13 +41,14 @@
             class="nav-link"
             href="https://www.linkedin.com/in/anastasiia-potekhina-066b99198/"
           >
-            <img class="logo" src="linkedinlogo.png" />
+            <img class="logo" src="pictures/linkedinlogo.png" />
             anastasiia-potekhina-066b99198</a
           >
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/merry-mouse">
-            <img class="logo" src="githublogo.png" /> github.com/merry-mouse</a
+            <img class="logo" src="pictures/githublogo.png" />
+            github.com/merry-mouse</a
           >
         </li>
       </ul>
