--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
       </ul>
     </div>
     <div class="home-intro">
-      <img class="ana_drawing" src="drawing_Anastasia.jpg" />
+      <img class="ana_drawing" src="pictures/drawing_Anastasia.jpg" />
       <br />
       <div class="intro_text">
         Hi there! I'm <span class="names">Anastasia</span><br />
         But you can call me <span class="names">Stash</span>
       </div>
     </div>
-    <div class="general-text">
-      <p>Junior Python developer</p>
-      <p>Passionate female coder</p>
-      <p>Based in Stockholm</p>
-      <p>Actively searching for a job</p>
+    <div class="shorties-box">
+      <h2>Junior Python developer</h2>
+      <h2>Passionate female coder</h2>
+      <h2>Based in Stockholm</h2>
+      <h2>Actively searching for a job</h2>
     </div>
     <p class="homepageEnd">© 2022 Anastasiia Potekhina</p>
   </body>
