--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <button class="home_icon" onclick="window.open('index.html','_self')">
-      <img class="home" src="HomeIcon.png" />
+      <img class="home" src="pictures/HomeIcon.png" />
     </button>
     <div class="home-intro">
       <div class="intro_text">Projects</div>
@@ -42,7 +42,7 @@
           class="footer"
           href="https://github.com/merry-mouse/python_web_scraping_checking_tickets"
         >
-          <img class="repo" src="repoGit.png"
+          <img class="repo" src="pictures/repoGit.png"
         /></a>
       </footer>
     </div>
@@ -61,7 +61,7 @@
       <footer class="footer">
         <a
           href="https://github.com/merry-mouse/deleting_expired_items_from_zalando_liked_list"
-          ><img class="repo" src="repoGit.png"
+          ><img class="repo" src="pictures/repoGit.png"
         /></a>
       </footer>
     </div>
@@ -80,7 +80,7 @@
       </article>
       <footer class="footer">
         <a href="https://github.com/merry-mouse/apartments_price_prediction"
-          ><img class="repo" src="repoGit.png" />
+          ><img class="repo" src="pictures/repoGit.png" />
         </a>
       </footer>
     </div>
@@ -101,7 +101,7 @@
       </article>
       <footer class="footer">
         <a href="https://github.com/merry-mouse/DNA"
-          ><img class="repo" src="repoGit.png" />
+          ><img class="repo" src="pictures/repoGit.png" />
         </a>
       </footer>
     </div>
@@ -120,7 +120,7 @@
       </article>
       <footer class="footer">
         <a href="https://github.com/merry-mouse/What_tree_areU"
-          ><img class="repo" src="repoGit.png"
+          ><img class="repo" src="pictures/repoGit.png"
         /></a>
       </footer>
     </div>
