--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
       </div>
     </div>
     <div class="shorties-box">
-      <h2>Junior Python developer</h2>
-      <h2>Passionate female coder</h2>
-      <h2>Based in Stockholm</h2>
-      <h2>Actively searching for a job</h2>
+      <h2>Junior Python developer 🐍</h2>
+      <h2>Passionate female coder 👩‍💻</h2>
+      <h2>Living in Stockholm</h2>
+      <h2>Actively searching for a job 🔍</h2>
     </div>
     <p class="homepageEnd">© 2022 Anastasiia Potekhina</p>
   </body>
