changing main page picture

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <button class="home_icon" onclick="window.open('index.html','_self')">
-      <img class="home" src="HomeIcon.png" />
+      <img class="home" src="pictures/HomeIcon.png" />
     </button>
     <div class="general-text">
       <div class="intro_text">General:</div>
