--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </ul>
     </div>
     <div class="home-intro">
-      <img class="ana_drawing" src="pictures/drawing_Anastasia.jpg" />
+      <img class="gadget_drawing" src="pictures/gadget_picture.png" />
       <br />
       <div class="intro_text">
         Hi there! I'm <span class="names">Anastasia</span><br />
@@ -48,6 +48,6 @@
       <h2>Living in Stockholm</h2>
       <h2>Actively searching for a job 🔍</h2>
     </div>
-    <p class="homepageEnd">© 2022 Anastasiia Potekhina</p>
+    <!-- <p class="homepageEnd">© 2022 Anastasiia Potekhina</p> -->
   </body>
 </html>
