--- a/index.html
+++ b/index.html
@@ -18,35 +18,37 @@
     <title>My Portfolio</title>
   </head>
   <body>
-    <div class="navs-tabs">
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="projects.html">Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contacts.html">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://github.com/merry-mouse">Git</a>
-        </li>
-      </ul>
-    </div>
-    <div class="home-intro">
-      <img class="gadget_drawing" src="pictures/gadget_picture.png" />
-      <br />
-      <div class="intro_text">
-        Hi there! I'm <span class="names">Anastasia</span><br />
-        But you can call me <span class="names">Stash</span>
+    <div class="container">
+      <div class="navs-tabs">
+        <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacts.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/merry-mouse">Git</a>
+          </li>
+        </ul>
       </div>
-    </div>
-    <div class="shorties-box">
-      <h2>Junior Python developer 🐍</h2>
-      <h2>Passionate female coder 👩‍💻</h2>
-      <h2>Living in Stockholm</h2>
-      <h2>Actively searching for a job 🔍</h2>
+      <div class="gadget_container">
+        <img class="gadget_drawing" src="pictures/gadget_picture.png" />
+      </div>
+      <div class="intro_text">
+        Hi there! I'm <span class="names">Anastasia </span><br />
+        But you can call me <span class="names">Stash </span>
+      </div>
+
+      <div class="shorties-box">
+        <h2>I'm a junior Python developer 🐍</h2>
+        <h2>Passionate female coder 👩‍💻</h2>
+        <h2>Living in Stockholm</h2>
+        <h2>Actively searching for a job 🔍</h2>
+      </div>
     </div>
     <!-- <p class="homepageEnd">© 2022 Anastasiia Potekhina</p> -->
   </body>
