--- a/about.html
+++ b/about.html
@@ -21,59 +21,64 @@
     <button class="home_icon" onclick="window.open('index.html','_self')">
       <img class="home" src="pictures/HomeIcon.png" />
     </button>
-    <div class="general-text">
-      <div class="intro_text">General:</div>
+    <div class="container">
+      <div class="general-text">
+        <div class="intro_text">General:</div>
 
-      <p>
-        I am a former MBA student, living in Stockholm, Sweden, who is
-        passionate about programming and problem solving. My interest for
-        programming grew from the subject of my master thesis which was
-        "Blockchain technology for credit risk management". I have most
-        experience in Python and most of my projects were written in Python
-        language but I also have basic knowledge of SQL, JavaScript, HTML and
-        CSS, C, MatLab.
-      </p>
-      <div class="intro_text">University education:</div>
-      <p>
-        Bachelor degree in Financial Management, 240 ECTS<br />
-        Transbaikal State University, 2011-2015
-      </p>
-      <p>
-        1-year Master in Financial Management , 60 ECTS<br />
-        Transbaikal State University, 2015-2016
-      </p>
-      <p>
-        Tempus program student, Master in Business Administration, 60 ECTS<br />
-        Umeå University, 2016-2017
-      </p>
-      <div class="intro_text">Programming courses and certificates:</div>
-      <p>"Introduction to HTML, CSS and JavaScript" by SheCodes</p>
-      <img class="certificate" src="pictures/SheCodesCertificate.png" />
-      <p>"Python Crash Course" by Coursera and Google</p>
-      <img class="certificate" src="pictures/pythonCrashCourse.png" />
-      <p>
-        "Using Python to Interact with the Operating System" by Coursera and
-        Google
-      </p>
-      <img class="certificate" src="pictures/usingPythonToInteractWithOS.png" />
-      <p>"Troubleshooting and Debugging Techniques" by Coursera and Google</p>
-      <img class="certificate" src="pictures/troubleshooting.png" />
-      <p>"Introduction to Git" by Coursera and Google</p>
-      <img class="certificate" src="pictures/introToGit.png" />
-      <p>"Advanced Python programming" by ProgrammingHub</p>
-      <img class="certificate" src="pictures/pythonAdvanced.jpg" />
-      <p>
-        CS50 Introduction to Computer Science by Harvard University and
-        OpenCourseWare (ongoing)
-      </p>
-      <div class="intro_text">Language skills:</div>
-      <p>
-        My mother-tongue is Russian<br />
-        I speak English fluently, my master studies in Sweden was held in
-        English.<br />
-        I can also speak Swedish at SAS GRUND 4 level. I was learning Swedish at
-        Umeå University, SFI and Komvux schools.<br />
-      </p>
+        <p>
+          I am a former MBA student, living in Stockholm, Sweden, who is
+          passionate about programming and problem solving. My interest for
+          programming grew from the subject of my master thesis which was
+          "Blockchain technology for credit risk management". I have most
+          experience in Python and most of my projects were written in Python
+          language but I also have basic knowledge of SQL, JavaScript, HTML and
+          CSS, C, MatLab.
+        </p>
+        <div class="intro_text">University education:</div>
+        <p>
+          Bachelor degree in Financial Management, 240 ECTS<br />
+          Transbaikal State University, 2011-2015
+        </p>
+        <p>
+          1-year Master in Financial Management , 60 ECTS<br />
+          Transbaikal State University, 2015-2016
+        </p>
+        <p>
+          Tempus program student, Master in Business Administration, 60 ECTS<br />
+          Umeå University, 2016-2017
+        </p>
+        <div class="intro_text">Programming courses and certificates:</div>
+        <p>"Introduction to HTML, CSS and JavaScript" by SheCodes</p>
+        <img class="certificate" src="pictures/SheCodesCertificate.png" />
+        <p>"Python Crash Course" by Coursera and Google</p>
+        <img class="certificate" src="pictures/pythonCrashCourse.png" />
+        <p>
+          "Using Python to Interact with the Operating System" by Coursera and
+          Google
+        </p>
+        <img
+          class="certificate"
+          src="pictures/usingPythonToInteractWithOS.png"
+        />
+        <p>"Troubleshooting and Debugging Techniques" by Coursera and Google</p>
+        <img class="certificate" src="pictures/troubleshooting.png" />
+        <p>"Introduction to Git" by Coursera and Google</p>
+        <img class="certificate" src="pictures/introToGit.png" />
+        <p>"Advanced Python programming" by ProgrammingHub</p>
+        <img class="certificate" src="pictures/pythonAdvanced.jpg" />
+        <p>
+          CS50 Introduction to Computer Science by Harvard University and
+          OpenCourseWare (ongoing)
+        </p>
+        <div class="intro_text">Language skills:</div>
+        <p>
+          My mother-tongue is Russian<br />
+          I speak English fluently, my master studies in Sweden was held in
+          English.<br />
+          I can also speak Swedish at SAS GRUND 4 level. I was learning Swedish
+          at Umeå University, SFI and Komvux schools.<br />
+        </p>
+      </div>
     </div>
   </body>
 </html>
