no home button at about page

--- a/about.html
+++ b/about.html
@@ -18,10 +18,23 @@
     <title>About</title>
   </head>
   <body>
-    <button class="home_icon" onclick="window.open('index.html','_self')">
-      <img class="home" src="pictures/HomeIcon.png" />
-    </button>
     <div class="container">
+      <div class="navs-tabs">
+        <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacts.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/merry-mouse">Git</a>
+          </li>
+        </ul>
+      </div>
       <div class="general-text">
         <div class="intro_text">General:</div>
 
