--- a/about.html
+++ b/about.html
@@ -39,26 +39,27 @@
         <div class="intro_text">General:</div>
 
         <p>
-          I am a former MBA student, living in Stockholm, Sweden, who is
-          passionate about programming and problem solving. My interest for
-          programming grew from the subject of my master thesis which was
-          "Blockchain technology for credit risk management". I have most
-          experience in Python and most of my projects were written in Python
-          language but I also have basic knowledge of SQL, JavaScript, HTML and
-          CSS, C, MatLab.
+          I am a former MBA student, living in Stockholm, who is on her way to
+          become a professional developer. I became interested in programming 2
+          years ago and my interest grew from the subject of my master thesis,
+          which was about Blockchain tecnology.<br />
+          I was fascinated by the experience of coding and my dream is to start
+          solving real-life problems and help others with code. Most of my
+          projects written in Python, but I also had experience with SQL, HTML,
+          CSS, JavaScript, C, MatLab.
         </p>
         <div class="intro_text">University education:</div>
         <p>
-          Bachelor degree in Financial Management, 240 ECTS<br />
-          Transbaikal State University, 2011-2015
+          🎓 Bachelor in Financial Management, 240 ECTS<br />
+          🏫 Transbaikal State University, 2011-2015
         </p>
         <p>
-          1-year Master in Financial Management , 60 ECTS<br />
-          Transbaikal State University, 2015-2016
+          🎓 Master in Financial Management , 60 ECTS<br />
+          🏫 Transbaikal State University, 2015-2016
         </p>
         <p>
-          Tempus program student, Master in Business Administration, 60 ECTS<br />
-          Umeå University, 2016-2017
+          🎓 Master in Business Administration, 60 ECTS<br />
+          🏫 Umeå University, 2016-2017
         </p>
         <div class="intro_text">Programming courses and certificates:</div>
         <p>"Introduction to HTML, CSS and JavaScript" by SheCodes</p>
@@ -84,13 +85,7 @@
           OpenCourseWare (ongoing)
         </p>
         <div class="intro_text">Language skills:</div>
-        <p>
-          My mother-tongue is Russian<br />
-          I speak English fluently, my master studies in Sweden was held in
-          English.<br />
-          I can also speak Swedish at SAS GRUND 4 level. I was learning Swedish
-          at Umeå University, SFI and Komvux schools.<br />
-        </p>
+        <p>English<br />Swedish<br />Russian</p>
       </div>
     </div>
   </body>
