added new certificates,intro text

--- a/about.html
+++ b/about.html
@@ -39,29 +39,34 @@
         <div class="intro_text">General:</div>
 
         <p>
-          I am a former MBA student, living in Stockholm, who is on her way to
-          become a professional developer. I became interested in programming 2
-          years ago and my interest grew from the subject of my master thesis,
-          which was about Blockchain tecnology.<br />
-          I was fascinated by the experience of coding and my dream is to start
-          solving real-life problems and help others with code. Most of my
-          projects written in Python, but I also had experience with SQL, HTML,
-          CSS, JavaScript, C, MatLab.
+          I am a Junior Python developer and a former MBA student, living in
+          Stockholm,Sweden. I started learning programming in December 2021,
+          inspired by the subject of my master thesis, which was about
+          Blockchain tecnology for Credit Risk Management.<br />
+          I quickly realized that coding is way more fun for me than Finance and
+          from that moment I understood that I want to be a programmer,solving
+          real-life problems and help others using code. Most of my projects
+          written in Python, but I also had experience with SQL, HTML, CSS,
+          JavaScript, C, MatLab.
         </p>
         <div class="intro_text">University education:</div>
         <p>
-          🎓 Bachelor in Financial Management, 240 ECTS<br />
-          🏫 Transbaikal State University, 2011-2015
+          🎓 Master in Business Administration, 60 ECTS<br />
+          🏫 Umeå University, 2016-2017
         </p>
         <p>
           🎓 Master in Financial Management , 60 ECTS<br />
           🏫 Transbaikal State University, 2015-2016
         </p>
         <p>
-          🎓 Master in Business Administration, 60 ECTS<br />
-          🏫 Umeå University, 2016-2017
+          🎓 Bachelor in Financial Management, 240 ECTS<br />
+          🏫 Transbaikal State University, 2011-2015
         </p>
         <div class="intro_text">Programming courses and certificates:</div>
+        <p>"AWS Cloud Practitioner Essentials" by Coursera and AWS</p>
+        <img class="certificate" src="pictures/aws.png" />
+        <p>"Python on the backend" by Udemy</p>
+        <img class="certificate" src="pictures/backend_py.jpg" />
         <p>"Introduction to HTML, CSS and JavaScript" by SheCodes</p>
         <img class="certificate" src="pictures/SheCodesCertificate.png" />
         <p>"Python Crash Course" by Coursera and Google</p>
