--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       </div>
 
       <div class="shorties-box">
-        <h2>I'm a junior Python developer 🐍</h2>
-        <h2>Passionate female coder 👩‍💻</h2>
-        <h2>Living in Stockholm</h2>
-        <h2>Actively searching for a job 🔍</h2>
+        <h2>I'm a Junior Python developer 🐍</h2>
+        <h2>Passionate coder and problem solver 👩‍💻</h2>
+        <h2>Living in Stockholm 🗺️</h2>
+        <h2>Have a cute kitty, called Pukko 😸</h2>
       </div>
     </div>
     <!-- <p class="homepageEnd">© 2022 Anastasiia Potekhina</p> -->
