--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="projects.html">Projects</a>
+            <a class="nav-link" href="projects2.html">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contacts.html">Contact</a>
