--- a/projects2.html
+++ b/projects2.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
   <head>
-    <!-- <meta name="viewport" content="initial-scale=1, width=device-width" /> -->
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,17 +15,17 @@
       crossorigin="anonymous"
     ></script>
     <link href="styles.css" rel="stylesheet" />
-    <title>My Portfolio</title>
+    <title>About</title>
   </head>
   <body>
     <div class="container">
       <div class="navs-tabs">
         <ul class="nav justify-content-center">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="projects2.html">Projects</a>
+            <a class="nav-link" href="projects.html">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contacts.html">Contact</a>
@@ -35,21 +35,17 @@
           </li>
         </ul>
       </div>
-      <div class="gadget_container">
-        <img class="gadget_drawing" src="pictures/gadget_picture.png" />
-      </div>
-      <div class="intro_text">
-        Hi there! I'm <span class="names">Anastasia </span><br />
-        But you can call me <span class="names">Stash </span>
-      </div>
-
-      <div class="shorties-box">
-        <h2>I'm a Junior Python developer 🐍</h2>
-        <h2>Passionate coder and problem solver 👩‍💻</h2>
-        <h2>Living in Stockholm 🗺️</h2>
-        <h2>Have a cute kitty, called Pukko 😸</h2>
-      </div>
+      <ul class="flex-container">
+        <li class="flex-item">
+          <img src="pictures/website/translator.png" />
+          <div class="project_text">1</div>
+        </li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+        <li class="flex-item">4</li>
+        <li class="flex-item">5</li>
+        <li class="flex-item">6</li>
+      </ul>
     </div>
-    <!-- <p class="homepageEnd">© 2022 Anastasiia Potekhina</p> -->
   </body>
 </html>
