put pictures into projects boxes

--- a/projects2.html
+++ b/projects2.html
@@ -37,14 +37,65 @@
       </div>
       <ul class="flex-container">
         <li class="flex-item">
-          <img src="pictures/website/translator.png" />
-          <div class="project_text">1</div>
+          <div
+            class="img_container"
+            style="background-image: url(pictures/website/swe2.jpg)"
+          ></div>
+          <div class="project_text">
+            Player that takes a PDF book in English and plays it text-to-speech
+            in English and Swedish sentence by sentence (ONGOING)
+          </div>
         </li>
-        <li class="flex-item">2</li>
-        <li class="flex-item">3</li>
-        <li class="flex-item">4</li>
-        <li class="flex-item">5</li>
-        <li class="flex-item">6</li>
+        <li class="flex-item">
+          <div
+            class="img_container"
+            style="background-image: url(pictures/website/zalando_small.jpg)"
+          ></div>
+          <div class="project_text">
+            Python program that delete expired or unavailable items from my
+            liked items list on Zalando
+          </div>
+        </li>
+        <li class="flex-item">
+          <div
+            class="img_container"
+            style="background-image: url(pictures/website/ticket.jpg)"
+          ></div>
+          <div class="project_text">
+            Python webscraper that checks availability of football tickets and
+            notify when it is available for purchase via email
+          </div>
+        </li>
+        <li class="flex-item">
+          <div
+            class="img_container"
+            style="background-image: url(pictures/website/linreg2.jpg)"
+          ></div>
+          <div class="project_text">
+            Apartment price prediction using Python Web Scraping and linear
+            regression algorithm
+          </div>
+        </li>
+        <li class="flex-item">
+          <div
+            class="img_container"
+            style="background-image: url(pictures/website/dna.jpg)"
+          ></div>
+          <div class="project_text">
+            Python program that models forensic investigation and finds a
+            suspect who's DNA matches the one on the crime scene
+          </div>
+        </li>
+        <li class="flex-item">
+          <div
+            class="img_container"
+            style="background-image: url(pictures/website/broccoli_tree.png)"
+          ></div>
+          <div class="project_text">
+            Python program that shows what tree you are according to your
+            features
+          </div>
+        </li>
       </ul>
     </div>
   </body>
