change tree pic

--- a/projects2.html
+++ b/projects2.html
@@ -89,7 +89,7 @@
         <li class="flex-item">
           <div
             class="img_container"
-            style="background-image: url(pictures/website/broccoli_tree.png)"
+            style="background-image: url(pictures/website/real_tree.jpg)"
           ></div>
           <div class="project_text">
             Python program that shows what tree you are according to your
