content management system

--- a/projects2.html
+++ b/projects2.html
@@ -35,68 +35,26 @@
           </li>
         </ul>
       </div>
-      <ul class="flex-container">
-        <li class="flex-item">
-          <div
-            class="img_container"
-            style="background-image: url(pictures/website/swe2.jpg)"
-          ></div>
-          <div class="project_text">
-            Player that takes a PDF book in English and plays it text-to-speech
-            in English and Swedish sentence by sentence (ONGOING)
-          </div>
-        </li>
-        <li class="flex-item">
-          <div
-            class="img_container"
-            style="background-image: url(pictures/website/zalando_small.jpg)"
-          ></div>
-          <div class="project_text">
-            Python program that delete expired or unavailable items from my
-            liked items list on Zalando
-          </div>
-        </li>
-        <li class="flex-item">
-          <div
-            class="img_container"
-            style="background-image: url(pictures/website/ticket.jpg)"
-          ></div>
-          <div class="project_text">
-            Python webscraper that checks availability of football tickets and
-            notify when it is available for purchase via email
-          </div>
-        </li>
-        <li class="flex-item">
-          <div
-            class="img_container"
-            style="background-image: url(pictures/website/linreg2.jpg)"
-          ></div>
-          <div class="project_text">
-            Apartment price prediction using Python Web Scraping and linear
-            regression algorithm
-          </div>
-        </li>
-        <li class="flex-item">
-          <div
-            class="img_container"
-            style="background-image: url(pictures/website/dna.jpg)"
-          ></div>
-          <div class="project_text">
-            Python program that models forensic investigation and finds a
-            suspect who's DNA matches the one on the crime scene
-          </div>
-        </li>
-        <li class="flex-item">
-          <div
-            class="img_container"
-            style="background-image: url(pictures/website/real_tree.jpg)"
-          ></div>
-          <div class="project_text">
-            Python program that shows what tree you are according to your
-            features
-          </div>
-        </li>
-      </ul>
+      <ul class="flex-container"></ul>
     </div>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script>
+      function fill_content(content) {
+        d3.select("ul.flex-container")
+          .selectAll("li.flex-item")
+          .data(content)
+          .join("li")
+          .attr("class", "flex-item")
+          .html(function (d) {
+            return `
+              <div class="img_container" style="background-image: url(${d.image_url})"></div>
+              <div class="project_text">${d.text}</div>`;
+          });
+      }
+
+      d3.csv(
+        "https://docs.google.com/spreadsheets/d/1YL58xAImJydbeZKIwvH1yfw3-nZmACt_JbyMYcGbtOM/gviz/tq?tqx=out:csv&sheet=projects"
+      ).then(fill_content);
+    </script>
   </body>
 </html>
