put contacts in the container

--- a/contacts.html
+++ b/contacts.html
@@ -18,37 +18,52 @@
     <title>Contacts</title>
   </head>
   <body>
-    <div class="home-intro">
-      <div class="intro_text">Contact me via mail or LinkedIn:</div>
-    </div>
-    <div class="contacts-box">
-      <ul class="nav flex-column">
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            aria-current="page"
-            href="mailto:potekh.anastasia@gmail.com"
-          >
-            <img class="logo" src="pictures/email.png" />
-            potekh.anastasia@gmail.com</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link"
-            href="https://www.linkedin.com/in/anastasiia-potekhina-066b99198/"
-          >
-            <img class="logo" src="pictures/linkedinlogo.png" />
-            anastasiia-potekhina-066b99198</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://github.com/merry-mouse">
-            <img class="logo" src="pictures/githublogo.png" />
-            github.com/merry-mouse</a
-          >
-        </li>
-      </ul>
+    <div class="container">
+      <div class="navs-tabs">
+        <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects2.html">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/merry-mouse">Git</a>
+          </li>
+        </ul>
+      </div>
+      <div class="home-intro">
+        <div class="intro_text">Contact me via mail or LinkedIn:</div>
+      </div>
+      <div class="shorties-box">
+        <ul class="nav flex-column">
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              aria-current="page"
+              href="mailto:potekh.anastasia@gmail.com"
+            >
+              <img class="logo" src="pictures/email.png" />
+              potekh.anastasia@gmail.com</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.linkedin.com/in/anapotekh/">
+              <img class="logo" src="pictures/linkedinlogo.png" />
+              www.linkedin.com/in/anapotekh</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/merry-mouse">
+              <img class="logo" src="pictures/githublogo.png" />
+              github.com/merry-mouse</a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
