opens linkedin and github in a new tab

--- a/contacts.html
+++ b/contacts.html
@@ -36,7 +36,7 @@
         </ul>
       </div>
       <div class="home-intro">
-        <div class="intro_text">Contact me via mail or LinkedIn:</div>
+        <div class="intro_text">Contact me via email or LinkedIn:</div>
       </div>
       <div class="shorties-box">
         <ul class="nav flex-column">
@@ -51,13 +51,21 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/anapotekh/">
+            <a
+              class="nav-link"
+              href="https://www.linkedin.com/in/anapotekh/"
+              target="_blank"
+            >
               <img class="logo" src="pictures/linkedinlogo.png" />
               www.linkedin.com/in/anapotekh</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/merry-mouse">
+            <a
+              class="nav-link"
+              href="https://github.com/merry-mouse"
+              target="_blank"
+            >
               <img class="logo" src="pictures/githublogo.png" />
               github.com/merry-mouse</a
             >
